# BambuSlicerKeySaver

./: .gitignore  .gitmodules  README.md  run.sh
resources/: BambuNetworkEngine.conf.sample
src/: Makefile  bambu_conf_decrypt.cpp  bigint.cpp  bigint.h  capture.cpp  capture.h  conf_oracle.h  connect_redirect.c  daemon.cpp  daemon.h  daemon_embed.h.stub  envelope.cpp  envelope.h  fake_broker.cpp  fake_broker.h  logging.h  main.cpp  output.cpp  output.h  plugin_source.h  reconstruct.cpp  reconstruct.h  version.cpp  version.h
src/bambu/: BambuNetworkingPluginHandle.cpp  BambuNetworkingPluginHandle.hpp
src/bambu/headless/: App.cpp  App.hpp  SignalHandler.cpp  SignalHandler.hpp  bambu_daemon.cpp
src/bambu/router/: LanUplink.cpp  LanUplink.hpp
src/bambu/server/: IUplink.hpp
src/daemon/: CMakeLists.txt
src/shims/: allow_ptrace.c  rdtsc_fake.c  watchdog_defeat.c  watchdog_defeat_v2.c
win/: CMakeLists.txt  README.md  build_main.bat  core_selftest.cpp  run_appcert_rng.ps1  run_flip_gate.ps1  run_flip_known.ps1
win/broker/: fake_broker2.cpp
win/host/: aes_tap.cpp  aes_tap.hpp  app_cert_fetch.cpp  app_key_selftest.cpp  app_key_sweep.cpp  app_key_sweep.hpp  cloud_tap.cpp  cloud_tap.hpp  death_diag.cpp  death_diag.hpp  declog.cpp  dump_regions.cpp  dump_regions.hpp  instr_cb.cpp  instr_cb.hpp  known_scan.cpp  known_scan.hpp  lan_discover.cpp  lan_discover.hpp  logkey.cpp  main.cpp  obn_http_winhttp.cpp  plugin_fetch.cpp  plugin_fetch.hpp  plugin_logmap.tsv  render_log.py  rng_tap.cpp  rng_tap.hpp  test_envelopes.h  verdict_flip.cpp  verdict_flip.hpp
win/shim/: verify_fake.cpp  verify_fake.hpp
